--- a/src/app/work/family-fund/page.mdx
+++ b/src/app/work/family-fund/page.mdx
@@ -18,7 +18,7 @@ export const caseStudy = {
   testimonial: {
     author: { name: 'Debra Fiscal', role: 'CEO of FamilyFund' },
     content:
-      'Working with Studio, we felt more like a partner than a customer. They really resonated with our mission to change the way people convince their parents to cash out their pensions.',
+      'Working with MarchForth, we felt more like a partner than a customer. They really resonated with our mission to change the way people convince their parents to cash out their pensions.',
   },
 }
 
