--- a/src/app/work/gathr/page.mdx
+++ b/src/app/work/gathr/page.mdx
@@ -1,4 +1,4 @@
-import imageLogo from '../../../../public/gathr-small.jpg'
+import imageLogo from '../../../../public/gathr-small-2.png'
 import imageHero from '../../../../public/gathr-screenshot.jpg'
 
 export const caseStudy = {
@@ -12,7 +12,6 @@ export const caseStudy = {
   ],
   logo: imageLogo,
   image: { src: imageHero },
-  date: '2026-01',
   service: 'Product engineering, Mobile app, Cloud platform',
 }
 
@@ -30,10 +29,10 @@ MarchForth helped shape a unified product experience: a mobile app for students 
 ## What we did
 
 <TagList>
-  <TagListItem>Flutter mobile development</TagListItem>
+  <TagListItem>React Native mobile development</TagListItem>
   <TagListItem>Event discovery and RSVP workflows</TagListItem>
   <TagListItem>Admin analytics dashboard</TagListItem>
-  <TagListItem>AWS backend services</TagListItem>
+  <TagListItem>Google Cloud backend services</TagListItem>
 </TagList>
 
 <StatList>
