--- a/src/app/work/my-tempie/page.mdx
+++ b/src/app/work/my-tempie/page.mdx
@@ -1,4 +1,4 @@
-import imageLogo from '../../../../public/my-tempie-small.jpg'
+import imageLogo from '../../../../public/my-tempie-small-2.png'
 import imageHero from '../../../../public/my-tempie-screenshot.jpg'
 
 export const caseStudy = {
@@ -12,7 +12,6 @@ export const caseStudy = {
   ],
   logo: imageLogo,
   image: { src: imageHero },
-  date: '2024-08',
   service: 'IoT integration, Mobile app, AWS cloud platform',
 }
 
@@ -21,7 +20,7 @@ export const metadata = {
   description: caseStudy.description,
 }
 
-## Executive summary
+## Overview
 
 MyTempie is a mobile-first health solution designed to capture user body temperature through an external IR sensor and synchronize that data to AWS for enterprise safety monitoring.
 
@@ -60,5 +59,5 @@ MarchForth implemented a production-ready architecture across hardware, software
   <StatListItem value="Automated" label="Compliance logging" />
   <StatListItem value="Real-time" label="Cloud sync to AWS" />
   <StatListItem value="Multi-org" label="Scalable data model" />
-  <StatListItem value="Low latency" label="API response profile" />
+  <StatListItem value="Low latency" label="API responses" />
 </StatList>
