--- a/src/app/work/tekstream/page.mdx
+++ b/src/app/work/tekstream/page.mdx
@@ -1,4 +1,4 @@
-import imageLogo from '../../../../public/tekstream-small.jpg'
+import imageLogo from '../../../../public/tekstream-small-2.png'
 
 export const caseStudy = {
   client: 'TekStream',
@@ -10,7 +10,6 @@ export const caseStudy = {
     'Together we delivered an AI-enabled operations model using AWS-native services, improving release velocity, incident response, and cost visibility.',
   ],
   logo: imageLogo,
-  date: '2025-11',
   service: 'AWS architecture, AI integration, Platform delivery',
 }
 
@@ -21,7 +20,7 @@ export const metadata = {
 
 ## Overview
 
-TekStream subcontracted MarchForth to support a complex transformation program for a multi-entity healthcare services organization operating on aging on-prem infrastructure.
+TekStream worked with MarchForth to support a complex transformation program for a multi-entity healthcare services organization operating on aging on-prem infrastructure.
 
 The engagement required both speed and precision. Legacy .NET and Java workloads had to be migrated with minimal downtime, while leadership needed better forecasting, more reliable operational insights, and a cleaner path to continuous delivery.
 
@@ -38,7 +37,7 @@ MarchForth joined TekStream's delivery team and owned key execution tracks end-t
 
 ## Delivery scenario
 
-We implemented a pragmatic target architecture anchored in Amazon ECS Fargate for containerized services and Lambda for bursty background workflows. Data pipelines were split between Amazon RDS for transactional integrity and DynamoDB for high-throughput event lookups. We introduced EventBridge and SQS to decouple brittle integrations and reduce failure amplification across services.
+We designed a practical target architecture rooted in Amazon ECS Fargate for containerized services and Lambda for high-volume background workloads. Data processing pipelines were separated between Amazon RDS for transactional consistency and DynamoDB for high-volume event searches. EventBridge and SQS were introduced to break fragile integrations and mitigate failure amplification between services.
 
 On top of the new cloud foundation, MarchForth built an internal AI triage assistant with Amazon Bedrock and OpenSearch-backed retrieval for runbooks and incident history. Operations teams used it to speed up diagnosis, recommend remediation paths, and surface relevant deployment context during active incidents.
 
